\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.6.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit finite mixture models using family
      function \code{mixture}.
      \item Implement different ways to sample new levels
      of grouping factors in \code{predict} and related 
      methods through argument \code{sample_new_levels}.
      Thanks to Tom Wallis and Jonah Gabry for a detailed 
      discussion about this feature.
      \item Add methods \code{loo_predict}, \code{loo_linpred},
      and \code{loo_predictive_interval} for computing
      LOO predictions thanks to Aki Vehtari and Jonah Gabry.
      \item Allow using \code{offset} in formulas
      of non-linear and auxiliary parameters.
      \item Allow sparse matrix multiplication in
      non-linear and distributional models.
      \item Allow using the \code{identity} link for
      all auxiliary parameters.
      \item Introduce method \code{control_params} to
      conveniently extract control parameters of the 
      NUTS sampler.
      \item Introduce argument \code{Iconditions} in
      \code{marginal_effects} for enhanced plotting of 
      two-way interactions.
      \item Improve flexibility of the \code{conditions} 
      argument of \code{marginal_effects}.
      \item Extend method \code{stanplot} to correctly 
      handle some new \code{mcmc_} plots of the 
      \pkg{bayesplot} package.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Improve the \code{update} method to
      only recompile models when the \pkg{Stan} code
      changes.
      \item Warn about divergent transitions when calling
      \code{summary} or \code{print} on \code{brmsfit} objects.
      \item Warn about unused variables in argument 
      \code{conditions} when calling \code{marginal_effects}.
      \item Export and document several distribution functions 
      that were previously kept internal.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{