@@ -63,6 +63,7 @@ S3method(plot,brmshypothesis)
 S3method(posterior_predict,brmsfit)
 S3method(posterior_samples,brmsfit)
 S3method(pp_check,brmsfit)
+S3method(pp_mixture,brmsfit)
 S3method(predict,brmsfit)
 S3method(predictive_error,brmsfit)
 S3method(print,brmsMarginalEffects)
@@ -204,6 +205,7 @@ export(posterior.samples)
 export(posterior_predict)
 export(posterior_samples)
 export(pp_check)
+export(pp_mixture)
 export(predictive_error)
 export(prior)
 export(prior_)
